Changelog
=========

15.4-dev0 - (unreleased)
---------------------------

15.3 - (2021-06-16)
---------------------------
* Feature: implemented EEAFigure provenance multi adapter
  in order to retrieve provenance data from ExternalDataSpec relations
  [ichim-david refs #130851]

15.2 - (2020-12-21)
---------------------------
* Bug fix: Added antialliasing configuration for Ghostscript
  [szabozo0 refs #120336]

15.1 - (2020-08-03)
---------------------------
* Change: cleaned temporal coverage and geographical_coverage macros from
  figure and dataset view, they now show up from the generic viewlets in place
  with other metadata
  [ichim-david refs #119540]
* Change: added upgrade script to cleanup geographicCoverage field values
  [alecghica refs #117948]

15.0 - (2020-06-19)
---------------------------
* Change: cleaned temporal coverage css override
  [ichim-david refs #117295]

14.9 - (2019-12-20)
---------------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on upgrade button
  available for eea.dataservice
  [iulianpetchesi refs #110427]

14.8 - (2019-11-29)
---------------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on upgrade button
  available for eea.dataservice
  [iulianpetchesi refs #110739]

14.7 - (2019-11-07)
---------------------------
* Bug fix: the field 'Last upload' is now hidden on EEAFigure view
  [alecghica refs #102731]

14.6 - (2019-11-06)
---------------------------
* Bug fix: Fix imgview adapter for EEAFigure when first FigureFile doesn't have Image children
  [avoinea refs #109515]

14.5 - (2019-10-30)
---------------------------
* Feature: the field 'Last upload' is now hidden
  [alecghica refs #102731]

14.4 - (2019-10-10)
---------------------------
* Bug fix: Optimize imgview adapters by moving code from __init__
  [avoinea refs #109515]

14.3 - (2019-10-03)
--------------------------
* Change: Modified the @@datasets_overview page to use effective/creation date