@@ -3,6 +3,8 @@ Changelog
 
 15.4-dev0 - (unreleased)
 ---------------------------
+* Feature: RestAPI for Data Reporting obligations
+  [avoinea refs #139536]
 
 15.3 - (2021-06-16)
 ---------------------------
